<resources>
    <string name="app_name">JoTrainer</string>
    <string name="mailHint">Email</string>
    <string name="passHint">Password</string>
    <string name="forgetStr">Forgot your password?</string>
    <string name="loginStr">Log in</string>
    <string name="dontHaveAccStr">Don\'t have an account ?</string>
    <string name="registStr">Register</string>
    <string name="createAccStr">Create your account</string>
    <string name="photoUpStr">Upload a profile image:</string>
    <string name="firstName">First name</string>
    <string name="lastNameStr">Last name</string>
    <string name="usernameStr">Username</string>
    <string name="phoneStr">Phone</string>
    <string name="Age">Age</string>
    <string name="cityStr">pick your city:</string>
    <string name="carTypeStr">Car Type</string>
    <string name="uploadImageCar">upload an image for your car:</string>
    <string name="createStr">Create my account</string>
    <string name="experienceYears">Years of experience:</string>
    <string name="studStr">Trainee</string>
    <string name="teachSTr">Trainer</string>
    <string name="registS">Sign Up as :</string>
    <string name="app_title">JoTrainer</string>
    <string name="officeStrName">Office name</string>
    <string name="title_activity_index">Index</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_index_main">index_main</string>
    <string name="proStr">profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expStr">experience</string>
    <string name="MyInfoSTR">My info</string>
    <string name="myStudentsStr">My trainees</string>
    <string name="schedualStr">schedule</string>
    <string name="detailsStr">Trainee details</string>
    <string name="declineStr">Decline</string>
    <string name="callStr">Call</string>
    <string name="chatStr">Send message</string>
    <string name="acceptStr">Accept</string>
    <string name="contactStr">Contact</string>
    <string name="addInfoStr">Edit trainee application</string>
    <string name="sessionDate">Next session date :</string>
    <string name="addSessionStr">Submit session</string>
    <string name="clickToAddDate">click here to add the date</string>

    <string name="dateFormat" translatable="false">EE, dd MMM</string>
    <string name="timeFormat" translatable="false">EE, dd MMM HH:mm</string>
    <string name="period" translatable="false">%1$s – %2$s</string>
    <string name="lessonsNumStr">Total number of sessions :</string>
    <string name="lessonsLeftStr">Number of sessions left :</string>
    <string name="editStr">Edit</string>
    <string name="addLessonsStr">Add extra sessions</string>
    <string name="submitStr">Submit</string>
    <string name="hideStr">Hide</string>
    <string name="startStr">Start</string>
    <string name="title_activity_student_gate">studentGate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profileStr">My profile</string>
    <string name="details">My details</string>
    <string name="studentSchedual">My schedule</string>
    <string name="currentTeacherStr">Current Trainer</string>
    <string name="moreStr">more</string>
    <string name="lessonsStr">Lessons summary</string>
    <string name="performanceStr">My performance</string>
    <string name="TodLessons">Today sessions</string>
    <string name="comingStr">Upcoming</string>
    <string name="archiveStr">Archive</string>
    <string name="currentLessStr">Current session</string>
    <string name="MessagesStr">Messages</string>
    <string name="studentPerfromanceStr">Performance</string>
    <string name="controlingStr">Controlling</string>
    <string name="percentageHint">/100</string>
    <string name="shiftStr">Shifting</string>
    <string name="monitoringStr">Monitoring</string>
    <string name="parkingStr">Parking</string>
    <string name="prioritiesStr">Priorities</string>
    <string name="notesStr">Notes</string>
    <string name="submit">Submit</string>
    <string name="sendReqStr">Send Request</string>
    <string name="expStr2">Experience :</string>
    <string name="examStr">Generate Quiz</string>
    <string name="nextStr">Next</string>
    <string name="finishStr">Finish</string>
    <string name="wrongAnswersStr">Wrong Answers</string>
    <string name="yourAnserStr">your answer :</string>
    <string name="rightANsStr">the right answer</string>
    <string name="QUIZ">Quiz</string>
    <string name="study">Study material</string>
    <string name="logOutStr">Logout</string>
    <string name="requestNewTimeStr">Change appointment</string>
    <string name="appointmentReqStr">Appointments Request</string>
    <string name="studentReqStr">Trainee Requests</string>
    <string name="TrafficSTR">Traffic signs</string>
    <string name="theBookStr">The book</string>
    <string name="finishsCourseStr">End course</string>
    <string name="rateTeacherStr">Help us by rating your Trainer</string>
    <string name="cancleStrReq">Canceling Requests</string>
    <string name="strForgetPass">Reset password</string>
    <string name="restBtn">Reset my password</string>
    <string name="send_message_chooser1">Send with Whatsapp</string>
    <string name="send_message_chooser2">Within JoTrainer</string>
    <string name="track_str">Track Trainer</string>
    <string name="moreStrNew">More</string>
    <string name="declineStrMessage">Are you sure about declining this session ?</string>
    <string name="acceptMessage">Do you really accept this session ?</string>
    <string name="finishNow">Finish Now</string>
    <string name="dateOfBirthStr">Date Of Birth</string>
    <string name="noSessionStr">"There is no running sessions at this moment "</string>
    <string name="str_license">"Training certificate "</string>
</resources>
