<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/myGrey"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="#f47b00"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/createAccStr"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"

        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"

                    android:text="@string/photoUpStr" />

                <ImageView
                    android:id="@+id/profImg"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/user" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    >

                    <EditText
                        android:id="@+id/fname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:backgroundTint="#f47b00"
                        android:hint="@string/firstName"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/lname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="#f47b00"
                        android:ems="10"
                        android:hint="@string/lastNameStr"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/mailHint"
                    android:backgroundTint="#f47b00"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/passHint"
                    android:backgroundTint="#f47b00"

                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#f47b00"
                    android:ems="10"
                    android:hint="@string/phoneStr"

                    android:inputType="phone"
                    android:maxLength="10" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/cityStr" />

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/nice_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/cityStr"
                    android:textSize="16sp"

                    app:arrowTint="#f47b00" />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:backgroundTint="#f47b00"

                    android:hint="@string/Age"
                    android:inputType="numberDecimal" />

                <LinearLayout
                    android:id="@+id/instrucLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/experienceYears" />

                    <com.travijuu.numberpicker.library.NumberPicker
                        android:id="@+id/number_picker"
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        app:focusable="false"
                        app:max="10"
                        app:min="0"
                        app:unit="1"
                        app:value="-5">

                    </com.travijuu.numberpicker.library.NumberPicker>

                    <EditText
                        android:id="@+id/carT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:hint="@string/carTypeStr"
                        android:backgroundTint="#f47b00"

                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/office"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:backgroundTint="#f47b00"
                        android:hint="@string/officeStrName"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/uploadImageCar" />

                    <ImageView
                        android:id="@+id/carImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/car_icon" />

                </LinearLayout>

                <Button
                    android:id="@+id/createBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/createStr"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_login_shape"
                    android:textColor="@android:color/white"
                    />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


</RelativeLayout>