<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activites.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/login_shape"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/studentRowH"
            android:layout_height="@dimen/studentRowH"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            app:cardCornerRadius="65dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo_final" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adventure"
            android:gravity="center"
            android:text="@string/app_title"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            app:cardBackgroundColor="@color/myGrey"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_mail_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#ba4c00"
                    android:ems="10"
                    android:hint="@string/mailHint"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            app:cardBackgroundColor="@color/myGrey"
            app:cardCornerRadius="10dp"

            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_vpn_key_black_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#ba4c00"
                    android:ems="10"
                    android:hint="@string/passHint"
                    android:inputType="textPassword" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgetStr"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/btn_login_shape"
            android:text="@string/loginStr"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/loginBtnTextSize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dontHaveAccStr"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/regist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/registStr"
                android:textColor="#f47b00"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>