<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myGrey"
    tools:context=".activites.studentApplicationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/circularbordersolid"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/pickDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sessionDate"
                    android:textColor="@color/myOrange"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:hint="@string/clickToAddDate"
                    android:padding="6dp"
                    android:paddingBottom="6dp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/submitSee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_login_shape"
                    android:text="@string/addSessionStr"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/circularbordersolid"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lessonsNumStr"
                        android:textColor="@color/myOrange"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numberLess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="0"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lessonsLeftStr"
                        android:textColor="@color/myOrange"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numberLeft"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="0"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/editLes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/places_autocomplete_powered_by_google_height"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_login_shape"
                    android:text="@string/editStr"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light" />

                <LinearLayout
                    android:id="@+id/editLessons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addLessonsStr"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <com.travijuu.numberpicker.library.NumberPicker
                        android:id="@+id/number_picker"
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        app:focusable="false"
                        app:max="10"
                        app:min="0"
                        app:unit="1"
                        app:value="-5">

                    </com.travijuu.numberpicker.library.NumberPicker>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/submitLesNum"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/places_autocomplete_powered_by_google_height"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_login_shape"
                            android:text="@string/submitStr"
                            android:textAllCaps="false"
                            android:textColor="@android:color/background_light" />

                        <Button
                            android:id="@+id/hide"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/places_autocomplete_powered_by_google_height"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_login_shape"
                            android:text="@string/hideStr"
                            android:textAllCaps="false"
                            android:textColor="@android:color/background_light" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <devlight.io.library.ArcProgressStackView
            android:id="@+id/apsv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:layout_gravity="center"
                app:apsv_animated="true"
                app:apsv_animation_duration="1000"
                app:apsv_dragged="false"
                app:apsv_indicator_orientation="vertical"
                app:apsv_leveled="true"
                app:apsv_model_bg_enabled="true"
                app:apsv_model_offset="5dp"
                app:apsv_preview_bg="#ccc"
                app:apsv_rounded="true"
                app:apsv_shadow_angle="90"
                app:apsv_shadow_color="#000"
                app:apsv_shadow_distance="5dp"
                app:apsv_shadow_radius="10dp"
                app:apsv_shadowed="true"
                app:apsv_start_angle="270"
                app:apsv_sweep_angle="360"
                app:apsv_text_color="#fff"
                app:apsv_typeface="fonts/agency.ttf" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>